k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opspilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opspilot
  template:
    metadata:
      labels:
        app: opspilot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: NotIn
                    values:
                      - monitoring
      containers:
        - name: opspilot
          image: jr31112/opspilot:latest
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
