k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opspilot
spec:
  type: NodePort
  selector:
    app: opspilot
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
